<resources>
    <string name="app_name">Thrift Hunter</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="show">SHOW</string>
    <string name="signup">SIGNUP</string>
    <string name="change">CHANGE</string>
    <string name="dummy_name">dummy_name</string>
    <string name="dummy_email">dummy_email</string>
    <string name="dummy_password">dummy_password</string>
    <string name="reg_text">Don\'t have an account yet?</string>
    <string name="login_text">Already have an account?</string>
    <string name="register">Register</string>
    <string name="reg_forgot">FORGOT PASS?</string>
    <string name="login_button">LOGIN</string>
    <string name="log_tit">LOGIN PAGE</string>
    <string name="login_top">Welcome!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">PHOTOS</string>
    <string name="upload">UPLOAD</string>
    <string name="username">Username</string>
    <string name="description">description</string>
    <string name="refresh">REFRESH</string>
    <string name="retry">RETRY</string>
    <string name="login">Login</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="searchbar">Search</string>
    <string name="dummyharga">Rp 2.000.000</string>
    <string name="namaakun">Nama Akun</string>
    <string name="ads">VIEW ADS</string>
    <string name="empty_favorite">No favorite ads yet</string>
    <string name="search_hint">Find secondhand products</string>
</resources>
