<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="243dp"
            android:layout_height="223dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingBottom="300dp"
            android:background="@drawable/layout_bg_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/log_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/login_top"
                android:textColor="@color/navy"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.thrifthunter.customview.EmailEditText
                android:id="@+id/edt_email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:paddingStart="16dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_title" />

            <com.thrifthunter.customview.PasswordEditText
                android:id="@+id/edt_password"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="32dp"
                android:paddingStart="16dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minWidth="200sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="482dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/login_button"
                android:textAlignment="center"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

            <Button
                android:id="@+id/btn_show"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/show"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

            <TextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/reg_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="124dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/register"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>