<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="243dp"
            android:layout_height="223dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:background="@drawable/layout_bg_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/reg_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/navy"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_top" />

            <com.thrifthunter.customview.EmailEditText
                android:id="@+id/edt_email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name" />

            <com.thrifthunter.customview.PasswordEditText
                android:id="@+id/edt_password"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minWidth="200sp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="482dp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_bg_white"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minWidth="200sp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="482dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="72dp"
                android:layout_marginRight="32dp"
                android:backgroundTint="@color/secondary"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

            <Button
                android:id="@+id/btn_show"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/show"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

            <TextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/login_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="124dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/common_signin_button_text"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:id="@+id/activity_registration"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    android:padding="16dp"-->
<!--    tools:context=".auth.RegistrationActivity">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--    <TextView-->
<!--        android:id="@+id/reg_top"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/reg_top"-->
<!--        android:textColor="@color/navy"-->
<!--        android:textSize="32sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="408dp"-->
<!--        android:layout_height="331dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:src="@drawable/logo"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/reg_top" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginTop="72dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView" >-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--        <EditText-->
<!--            android:id="@+id/edt_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/name"-->
<!--            android:inputType="textPersonName"-->
<!--            android:maxLines="1"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/imageView" />-->

<!--        <EditText-->
<!--            android:id="@+id/edt_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/email"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:maxLines="1"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/edt_name" />-->

<!--        <com.thrifthunter.customview.PasswordEditText-->
<!--            android:id="@+id/edt_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPersonName"-->
<!--            android:maxLines="1"-->
<!--            android:minWidth="200sp"-->
<!--            tools:ignore="TextFields"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="482dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/edt_email" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_show"-->
<!--            android:layout_width="90dp"-->
<!--            android:layout_height="45dp"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:text="Show"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.981"-->
<!--            app:layout_constraintStart_toEndOf="@+id/btn_save"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/edt_password" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_save"-->
<!--            android:layout_width="124dp"-->
<!--            android:layout_height="46dp"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:backgroundTint="@color/tiger"-->
<!--            android:text="@string/signup"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/edt_password" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--</ScrollView>-->